fix: logo wrap when not enough spase fix: url in appLoader section

--- a/migration-newip-to-ts/src/global.css
+++ b/migration-newip-to-ts/src/global.css
@@ -27,10 +27,12 @@ header h1 {
 footer {
     height: 100px;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
 }
 .rss-logo {
+    display: block;
     width: 300px;
     height: 100px;
     margin: 20px;
